--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Lato:wght@300&display=swap" rel="stylesheet">
 
+    <!--  -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>React App</title>
