--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Lato:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap" rel="stylesheet">
-    <!--  -->
+<link href="https://fonts.googleapis.com/css2?family=Sanchez&display=swap" rel="stylesheet">
+   <!--  -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>React App</title>
