--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Klee+One&family=Nunito&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">  
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Raleway:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 <!--  -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
